Version 0.5.3 (xx-12-2008)
* Bug #293908: Segfaults when disabling coverart plugin
* Bug #305662: Segfault with accents and long filename
* Added support for connection through proxy servers
* Fixed random crashes because of cover and lyrics plugins

Version 0.5.2 (11-10-2008)
* Improved connection handling and fixed almost all crashes
* Fix random crashes occurring because of cover and lyrics plugins
* Fixed a bug that caused Gimmix to freeze sometimes when the user clicked "Get Lyrics" button
* Interface enhancement: Player control buttons made borderless
* Fixed delays/problems while updating song info when user updates an ID3 tag
* Wejpconfig updated to 20061102
* Previously Gimmix could handle only 128 covers in the database. This is now fixed.
* Fixed a crash when saving newly fetched album covers whose album name(s) contained trailing whitespaces
* The system tray tooltip is too close to the panel. make it display a little away from the panel.

Version 0.5.1 (02-10-2008)
* Gimmix is now compatible with libmpd >= v0.16.0
* Improved cover art search function
* Numerous crash fixes
* Cover and Lyrics plugins are now enabled by default. use --disable-lyrics and --disable-cover to 
  disable them.
* Gimmix now continues to run even if mpd is not running. Users can reconnect to mpd from Gimmix by
  clicking the "Connect" button
* Fixed a bug where "Germany" was not being displayed in cover art location in preferences
* Minor tweaks

Version 0.5.0 (26-09-2008) Happy 2nd Birthday GIMMIX! \o/
* Bug #234739: Progress bar shows garbage next to time (in case of songs of length over 99 minutes)
* Bug #253140: Gimmix sometimes displays "assertion `percentage >= 0 && percentage <= 1.0' failed"
* Bug #263975: Window becomes too large if the song title is very long. This bug also fixes an issue
  where strange trailing whitespaces appearead in the song title when the user modified the ID3 tag
  information of a song.